--- a/presto-native-execution/docker-compose.yml
+++ b/presto-native-execution/docker-compose.yml
@@ -19,6 +19,26 @@ services:
       context: .
       dockerfile: scripts/dockerfiles/ubuntu-22.04-dependency.dockerfile
 
+  ubuntu-native-ccache:
+    # Usage:
+    #   docker compose build ubuntu-native-ccache
+    #   podman compose build ubuntu-native-ccache
+    image: presto/prestissimo-dependency:ubuntu-22.04
+    build:
+      args:
+          # A few files in Velox require significant memory to compile and link.
+          # Build requires 18GB of memory for 2 threads.
+        - NUM_THREADS=2 # default value for NUM_THREADS.
+        - DEPENDENCY_IMAGE=presto/prestissimo-dependency:ubuntu-22.04
+        - BASE_IMAGE=ubuntu:22.04
+        - OSNAME=ubuntu
+        - EXTRA_CMAKE_FLAGS=-DPRESTO_ENABLE_TESTING=OFF
+                            -DPRESTO_ENABLE_PARQUET=ON
+                            -DPRESTO_ENABLE_S3=ON
+      context: .
+      dockerfile: scripts/dockerfiles/prestissimo-runtime.dockerfile
+      target: prestissimo-ccache
+
   ubuntu-native-runtime:
     # Usage:
     #   docker compose build ubuntu-native-runtime
@@ -46,6 +66,23 @@ services:
     build:
       context: .
       dockerfile: scripts/dockerfiles/centos-dependency.dockerfile
+
+  centos-native-ccache:
+    # Usage:
+    #   docker compose build centos-native-ccache
+    #   podman compose build centos-native-ccache
+    image: presto/prestissimo-dependency:centos9
+    build:
+      args:
+          # A few files in Velox require significant memory to compile and link.
+          # Build requires 18GB of memory for 2 threads.
+        - NUM_THREADS=2 # default value for NUM_THREADS
+        - EXTRA_CMAKE_FLAGS=-DPRESTO_ENABLE_TESTING=OFF
+                            -DPRESTO_ENABLE_PARQUET=ON
+                            -DPRESTO_ENABLE_S3=ON
+      context: .
+      dockerfile: scripts/dockerfiles/prestissimo-runtime.dockerfile
+      target: prestissimo-ccache
 
   centos-native-runtime:
     # Usage:
