--- a/presto-native-execution/docker-compose.yml
+++ b/presto-native-execution/docker-compose.yml
@@ -44,13 +44,12 @@ services:
       - ..:/presto
     working_dir: /presto/presto-native-execution
     environment:
-    #  - CCACHE_DIR=/presto/presto-native-execution/.ccache
       - NUM_THREADS=2 # default value for NUM_THREADS
       - EXTRA_CMAKE_FLAGS=-DPRESTO_ENABLE_TESTING=OFF
                           -DPRESTO_ENABLE_PARQUET=ON
                           -DPRESTO_ENABLE_S3=ON
     command: >
-      bash -c "if [ ! -d /presto/presto-native-execution/.ccache ]; then cp -r /root/.cache/ccache /presto/presto-native-execution/.ccache; fi && git config --global --add safe.directory /presto && git config --global --add safe.directory /presto/presto-native-execution/velox && ccache -sz -v && exec bash -i"
+      bash -c "git config --global --add safe.directory /presto && git config --global --add safe.directory /presto/presto-native-execution/velox && ccache -sz -v && exec bash -i"
 
   ubuntu-native-runtime:
     # Usage:
@@ -102,13 +101,12 @@ services:
       - ..:/presto
     working_dir: /presto/presto-native-execution
     environment:
-      - CCACHE_BASEDIR=/presto/presto-native-execution
       - NUM_THREADS=2 # default value for NUM_THREADS
       - EXTRA_CMAKE_FLAGS=-DPRESTO_ENABLE_TESTING=OFF
                           -DPRESTO_ENABLE_PARQUET=ON
                           -DPRESTO_ENABLE_S3=ON
     command: >
-      bash -c "if [ ! -d /presto/presto-native-execution/.ccache ]; then cp -r /root/.cache/ccache /presto/presto-native-execution/.ccache; fi && git config --global --add safe.directory /presto && ccache -sz -v && exec bash -i"
+      bash -c "echo 'unset LANG' >> /root/.bashrc && git config --global --add safe.directory /presto && git config --global --add safe.directory /presto/presto-native-execution/velox && ccache -sz -v && exec bash -i"
 
   centos-native-runtime:
     # Usage:
