Add docker devenv
Add docker dev env

Use cache

Update dockerfiles

Add test env

--- a/presto-native-execution/docker-compose.yml
+++ b/presto-native-execution/docker-compose.yml
@@ -16,6 +16,9 @@ services:
     #   podman compose build ubuntu-native-dependency
     image: presto/prestissimo-dependency:ubuntu-22.04
     build:
+      args:
+      - WGET_OPTIONS=-c
+      - CURL_OPTIONS=-C -
       context: .
       dockerfile: scripts/dockerfiles/ubuntu-22.04-dependency.dockerfile
 
@@ -44,6 +47,9 @@ services:
     #   podman compose build centos-native-dependency
     image: presto/prestissimo-dependency:centos9
     build:
+      args:
+      - WGET_OPTIONS=-c
+      - CURL_OPTIONS=-C -
       context: .
       dockerfile: scripts/dockerfiles/centos-dependency.dockerfile
 
