--- a/presto-dev/Makefile
+++ b/presto-dev/Makefile
@@ -1,8 +1,11 @@
 ORG ?= prestodb
 DOCKER_CMD ?= docker
 CLEAN_CACHE ?= false
+NUM_THREADS ?= 8
+VERSION := $(shell grep -m 1 '^    <version>' ../pom.xml | sed -e 's/.*<version>\([^<]*\)<\/version>.*/\1/' -e 's/-SNAPSHOT//')
+COMMIT_ID := $(shell git rev-parse --short origin/master)
 
-.PHONY: build centos-dep ubuntu-dep centos-cpp-dev ubuntu-cpp-dev centos-dev ubuntu-dev release-prepare release-publish pull-centos pull-ubuntu
+.PHONY: build centos-dep ubuntu-dep centos-cpp-dev ubuntu-cpp-dev centos-dev ubuntu-dev release-prepare release-publish pull-centos pull-ubuntu tag-centos-latest tag-ubuntu-latest
 
 build:
 	$(DOCKER_CMD) compose build
@@ -38,3 +41,10 @@ pull-centos:
 pull-ubuntu:
 	$(DOCKER_CMD) pull ${ORG}/presto-dev:ubuntu-latest
 	$(DOCKER_CMD) tag ${ORG}/presto-dev:ubuntu-latest presto/presto-dev:ubuntu-22.04
+
+tag-centos-latest:
+	ORG=$(ORG) DOCKER_CMD=$(DOCKER_CMD) ./scripts/release.sh manifest-latest centos
+
+tag-ubuntu-latest:
+	ORG=$(ORG) DOCKER_CMD=$(DOCKER_CMD) ./scripts/release.sh manifest-latest ubuntu
+
