--- a/presto-dev/presto/etc/jvm.config
+++ b/presto-dev/presto/etc/jvm.config
@@ -7,3 +7,5 @@
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
 -Djdk.attach.allowAttachSelf=true
+-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=9999
+
