--- a/presto-dev/Dockerfile-dev
+++ b/presto-dev/Dockerfile-dev
@@ -13,6 +13,53 @@
 ARG BASE_IMAGE=quay.io/centos/centos:stream9
 ARG CLEAN_CACHE
 
+FROM ${BASE_IMAGE} as ubuntu-dev
+
+ENV PRESTO_HOME=/opt/presto \
+    JMX_PROMETHEUS_JAVAAGENT_VERSION=0.20.0
+
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y software-properties-common wget less procps git vim diffutils curl xz-utils openjdk-17-jdk-headless && \
+    add-apt-repository ppa:deadsnakes/ppa && \
+    apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y python3.11 python3.11-venv python3.11-distutils && \
+    update-alternatives --install /usr/bin/python python /usr/bin/python3.11 1 && \
+    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 && \
+    python3 -m pip install cmake
+
+RUN --mount=type=cache,target=/root/m2 \
+    --mount=type=bind,source=..,target=${BUILD_ROOT},rw \
+    cd ${BUILD_ROOT} && \
+    export MAVEN_USER_HOME=/root/m2 && \
+    if [ "${CLEAN_CACHE}" = "true" ]; then \
+      echo "Cleaning m2 folder: ${MAVEN_USER_HOME}" && \
+      rm -rf ${MAVEN_USER_HOME}/* ; \
+    fi && \
+    ./mvnw clean install -Dmaven.repo.local=${MAVEN_USER_HOME}/repository -DskipTests && \
+    for dir in presto-*; do \
+      rm -rf /root/m2/repository/com/facebook/presto/$dir; \
+    done && \
+    rm -rf /var/cache/.cache /var/cache/.m2 /root/.m2 && \
+    cp -a ${MAVEN_USER_HOME} /var/cache/.m2 && \
+    ln -sf /var/cache/.m2 /root/.m2 && \
+    mv /root/.cache /var/cache/ && \
+    ln -sf /var/cache/.cache /root/.cache && \
+    mkdir -p $PRESTO_HOME && \
+    tar --strip-components=1 -C "$PRESTO_HOME" -zxf /$BUILD_ROOT/presto-server/target/presto-server-*.tar.gz \
+    && cp ${BUILD_ROOT}/presto-cli/target/presto-cli-*-executable.jar /opt/presto-cli \
+    && chmod 0755 /opt/presto-cli \
+    && ln -sf /opt/presto-cli /usr/local/bin/ \
+    #  mkdir for config
+    && mkdir -p $PRESTO_HOME/etc/catalog \
+    && mkdir -p /var/lib/presto/data \
+        && mkdir -p /usr/lib/presto/utils \
+        && curl -o /usr/lib/presto/utils/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/$JMX_PROMETHEUS_JAVAAGENT_VERSION/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar \
+        && ln -sf /usr/lib/presto/utils/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar /usr/lib/presto/utils/jmx_prometheus_javaagent.jar
+
+COPY --chmod=0755 presto-dev/presto/etc $PRESTO_HOME/etc
+COPY --chmod=0755 presto-dev/presto/entrypoint.sh $PRESTO_HOME/
+
 FROM ${BASE_IMAGE} as centos-dev
 
 ENV PYTHON_VERSION=3.11.9 \
@@ -48,62 +95,11 @@ RUN --mount=type=cache,target=/root/m2 \
     for dir in presto-*; do \
       rm -rf /root/m2/repository/com/facebook/presto/$dir; \
     done && \
-    rm -rf /var/cache/m2 /var/cache/pip /var/cache/uv /root/.m2 && \
-    cp -a ${MAVEN_USER_HOME} /var/cache/m2 && \
-    ln -sf /var/cache/m2 /root/.m2 && \
-    mv /root/.cache/uv /var/cache/uv && \
-    mv /root/.cache/pip /var/cache/pip && \
-    rm -rf /root/.cache/uv && ln -sf /var/cache/uv /root/.cache/uv && \
-    rm -rf /root/.cache/pip && ln -sf /var/cache/pip /root/.cache/pip && \
-    mkdir -p $PRESTO_HOME && \
-    tar --strip-components=1 -C "$PRESTO_HOME" -zxf /$BUILD_ROOT/presto-server/target/presto-server-*.tar.gz \
-    && cp ${BUILD_ROOT}/presto-cli/target/presto-cli-*-executable.jar /opt/presto-cli \
-    && chmod 0755 /opt/presto-cli \
-    && ln -sf /opt/presto-cli /usr/local/bin/ \
-    #  mkdir for config
-    && mkdir -p $PRESTO_HOME/etc/catalog \
-    && mkdir -p /var/lib/presto/data \
-        && mkdir -p /usr/lib/presto/utils \
-        && curl -o /usr/lib/presto/utils/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/$JMX_PROMETHEUS_JAVAAGENT_VERSION/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar \
-        && ln -sf /usr/lib/presto/utils/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar /usr/lib/presto/utils/jmx_prometheus_javaagent.jar
-
-COPY --chmod=0755 presto-dev/presto/etc $PRESTO_HOME/etc
-COPY --chmod=0755 presto-dev/presto/entrypoint.sh $PRESTO_HOME/
-
-FROM ${BASE_IMAGE} as ubuntu-dev
-
-ENV PRESTO_HOME=/opt/presto \
-    JMX_PROMETHEUS_JAVAAGENT_VERSION=0.20.0
-
-RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
-    apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y software-properties-common wget less procps git vim diffutils curl xz-utils openjdk-17-jdk-headless && \
-    add-apt-repository ppa:deadsnakes/ppa && \
-    apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y python3.11 python3.11-venv python3.11-distutils && \
-    update-alternatives --install /usr/bin/python python /usr/bin/python3.11 1 && \
-    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 && \
-    python3 -m pip install cmake
-
-RUN --mount=type=cache,target=/root/m2 \
-    --mount=type=bind,source=..,target=${BUILD_ROOT},rw \
-    cd ${BUILD_ROOT} && \
-    export MAVEN_USER_HOME=/root/m2 && \
-    if [ "${CLEAN_CACHE}" = "true" ]; then \
-      echo "Cleaning m2 folder: ${MAVEN_USER_HOME}" && \
-      rm -rf ${MAVEN_USER_HOME}/* ; \
-    fi && \
-    ./mvnw clean install -Dmaven.repo.local=${MAVEN_USER_HOME}/repository -DskipTests && \
-    for dir in presto-*; do \
-      rm -rf /root/m2/repository/com/facebook/presto/$dir; \
-    done && \
-    rm -rf /var/cache/m2 /root/.m2 && \
-    cp -a ${MAVEN_USER_HOME} /var/cache/m2 && \
-    ln -sf /var/cache/m2 /root/.m2 && \
-    mv /root/.cache/uv /var/cache/uv && \
-    mv /root/.cache/pip /var/cache/pip && \
-    rm -rf /root/.cache/uv && ln -sf /var/cache/uv /root/.cache/uv && \
-    rm -rf /root/.cache/pip && ln -sf /var/cache/pip /root/.cache/pip && \
+    rm -rf /var/cache/.cache /var/cache/.m2 /root/.m2 && \
+    cp -a ${MAVEN_USER_HOME} /var/cache/.m2 && \
+    ln -sf /var/cache/.m2 /root/.m2 && \
+    mv /root/.cache /var/cache/ && \
+    ln -sf /var/cache/.cache /root/.cache && \
     mkdir -p $PRESTO_HOME && \
     tar --strip-components=1 -C "$PRESTO_HOME" -zxf /$BUILD_ROOT/presto-server/target/presto-server-*.tar.gz \
     && cp ${BUILD_ROOT}/presto-cli/target/presto-cli-*-executable.jar /opt/presto-cli \
