--- a/presto-dev/Dockerfile-dev
+++ b/presto-dev/Dockerfile-dev
@@ -16,7 +16,8 @@ ARG CLEAN_CACHE
 FROM ${BASE_IMAGE} as ubuntu-dev
 
 ENV PRESTO_HOME=/opt/presto \
-    JMX_PROMETHEUS_JAVAAGENT_VERSION=0.20.0
+    JMX_PROMETHEUS_JAVAAGENT_VERSION=0.20.0 \
+    BUILD_ROOT=/presto
 
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     apt-get update && \
@@ -40,17 +41,17 @@ RUN --mount=type=cache,target=/root/m2 \
     for dir in presto-*; do \
       rm -rf /root/m2/repository/com/facebook/presto/$dir; \
     done && \
-    rm -rf /var/cache/.cache /var/cache/.m2 /root/.m2 && \
-    cp -a ${MAVEN_USER_HOME} /var/cache/.m2 && \
-    ln -sf /var/cache/.m2 /root/.m2 && \
-    mv /root/.cache /var/cache/ && \
-    ln -sf /var/cache/.cache /root/.cache && \
+    mkdir -p /var/cache/root && \
+    rm -rf /var/cache/root/.cache /var/cache/root/.m2 /root/.m2 && \
+    cp -a ${MAVEN_USER_HOME} /var/cache/root/.m2 && \
+    ln -sf /var/cache/root/.m2 /root/.m2 && \
+    mv /root/.cache /var/cache/root/ && \
+    ln -sf /var/cache/root/.cache /root/.cache && \
     mkdir -p $PRESTO_HOME && \
     tar --strip-components=1 -C "$PRESTO_HOME" -zxf /$BUILD_ROOT/presto-server/target/presto-server-*.tar.gz \
     && cp ${BUILD_ROOT}/presto-cli/target/presto-cli-*-executable.jar /opt/presto-cli \
     && chmod 0755 /opt/presto-cli \
     && ln -sf /opt/presto-cli /usr/local/bin/ \
-    #  mkdir for config
     && mkdir -p $PRESTO_HOME/etc/catalog \
     && mkdir -p /var/lib/presto/data \
         && mkdir -p /usr/lib/presto/utils \
@@ -81,37 +82,12 @@ RUN --mount=type=cache,target=/var/cache/dnf,sharing=locked \
     alternatives --install /usr/bin/python python /usr/local/bin/python3.11 1 && \
     alternatives --install /usr/bin/python3 python3 /usr/local/bin/python3.11 1 && \
     python3 -m pip install cmake && \
-    rm -rf Python-${PYTHON_VERSION}
+    rm -rf Python-${PYTHON_VERSION} && \
+    mkdir -p /var/cache/root && \
+    ln -sf /var/cache/root/.m2 /root/.m2 && \
+    ln -sf /var/cache/root/.cache /root/.cache
 
-RUN --mount=type=cache,target=/root/m2 \
-    --mount=type=bind,source=..,target=${BUILD_ROOT},rw \
-    cd /presto && \
-    export MAVEN_USER_HOME=/root/m2 && \
-    if [ "${CLEAN_CACHE}" = "true" ]; then \
-      echo "Cleaning m2 folder: ${MAVEN_USER_HOME}" && \
-      rm -rf ${MAVEN_USER_HOME}/* ; \
-    fi && \
-    ./mvnw clean install -Dmaven.repo.local=${MAVEN_USER_HOME}/repository -DskipTests && \
-    for dir in presto-*; do \
-      rm -rf /root/m2/repository/com/facebook/presto/$dir; \
-    done && \
-    rm -rf /var/cache/.cache /var/cache/.m2 /root/.m2 && \
-    cp -a ${MAVEN_USER_HOME} /var/cache/.m2 && \
-    ln -sf /var/cache/.m2 /root/.m2 && \
-    mv /root/.cache /var/cache/ && \
-    ln -sf /var/cache/.cache /root/.cache && \
-    mkdir -p $PRESTO_HOME && \
-    tar --strip-components=1 -C "$PRESTO_HOME" -zxf /$BUILD_ROOT/presto-server/target/presto-server-*.tar.gz \
-    && cp ${BUILD_ROOT}/presto-cli/target/presto-cli-*-executable.jar /opt/presto-cli \
-    && chmod 0755 /opt/presto-cli \
-    && ln -sf /opt/presto-cli /usr/local/bin/ \
-    #  mkdir for config
-    && mkdir -p $PRESTO_HOME/etc/catalog \
-    && mkdir -p /var/lib/presto/data \
-        && mkdir -p /usr/lib/presto/utils \
-        && curl -o /usr/lib/presto/utils/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/$JMX_PROMETHEUS_JAVAAGENT_VERSION/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar \
-        && ln -sf /usr/lib/presto/utils/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar /usr/lib/presto/utils/jmx_prometheus_javaagent.jar
-
-COPY --chmod=0755 presto-dev/presto/etc $PRESTO_HOME/etc
-COPY --chmod=0755 presto-dev/presto/entrypoint.sh $PRESTO_HOME/
+COPY --from=ubuntu-dev /var/cache/root/.m2 /var/cache/root/.m2
+COPY --from=ubuntu-dev /var/cache/root/.cache /var/cache/root/.cache
+COPY --from=ubuntu-dev $PRESTO_HOME $PRESTO_HOME
 
