--- a/presto-dev/Dockerfile-cpp-dev
+++ b/presto-dev/Dockerfile-cpp-dev
@@ -50,10 +50,10 @@ RUN --mount=type=bind,source=.,target=${BUILD_ROOT},rw \
     chmod 0755 ${PRESTISSIMO_HOME}/bin/presto_server && \
     echo "${PRESTISSIMO_HOME}/lib" > /etc/ld.so.conf.d/prestissimo.conf && ldconfig && \
     make clean && \
-    mkdir -p /var/cache/root && \
-    rm -rf /var/cache/root/.ccache && rm -rf /root/.ccache && \
-    cp -r ${CCACHE_DIR} /var/cache/root/.ccache && \
-    ln -sf /var/cache/root/.ccache /root/.ccache && \
+    mkdir -p /opt/cache && \
+    rm -rf /opt/cache/.ccache && rm -rf /root/.ccache && \
+    cp -r ${CCACHE_DIR} /opt/cache/.ccache && \
+    ln -sf /opt/cache/.ccache /root/.ccache && \
     ccache -sz -v
 
 COPY --chmod=0755 presto-dev/prestissimo/etc $PRESTISSIMO_HOME/etc
