--- a/presto-dev/Dockerfile-dev
+++ b/presto-dev/Dockerfile-dev
@@ -13,18 +13,19 @@
 ARG BASE_IMAGE=quay.io/centos/centos:stream9
 ARG CLEAN_CACHE
 
-FROM ${BASE_IMAGE} as ubuntu-dev
+FROM ubuntu:22.04 as builder
 
 ENV PRESTO_HOME=/opt/presto \
     JMX_PROMETHEUS_JAVAAGENT_VERSION=0.20.0 \
     BUILD_ROOT=/presto
 
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt/lists,sharing=locked \
     apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y software-properties-common wget less procps git vim diffutils curl xz-utils openjdk-17-jdk-headless && \
     add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y python3.11 python3.11-venv python3.11-distutils && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y python3.11 python3.11-venv python3.11-distutils python3-pip && \
     update-alternatives --install /usr/bin/python python /usr/bin/python3.11 1 && \
     update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 && \
     python3 -m pip install cmake
@@ -41,25 +42,46 @@ RUN --mount=type=cache,target=/root/m2 \
     for dir in presto-*; do \
       rm -rf /root/m2/repository/com/facebook/presto/$dir; \
     done && \
-    mkdir -p /var/cache/root && \
-    rm -rf /var/cache/root/.cache /var/cache/root/.m2 /root/.m2 && \
-    cp -a ${MAVEN_USER_HOME} /var/cache/root/.m2 && \
-    ln -sf /var/cache/root/.m2 /root/.m2 && \
-    mv /root/.cache /var/cache/root/ && \
-    ln -sf /var/cache/root/.cache /root/.cache && \
-    mkdir -p $PRESTO_HOME && \
+    mkdir -p /opt/cache && \
+    cp -a ${MAVEN_USER_HOME} /opt/cache/.m2 && \
+    mv /root/.cache /opt/cache/ && \
+    mkdir -p $PRESTO_HOME/bin && \
     tar --strip-components=1 -C "$PRESTO_HOME" -zxf /$BUILD_ROOT/presto-server/target/presto-server-*.tar.gz \
-    && cp ${BUILD_ROOT}/presto-cli/target/presto-cli-*-executable.jar /opt/presto-cli \
-    && chmod 0755 /opt/presto-cli \
+    && cp ${BUILD_ROOT}/presto-cli/target/presto-cli-*-executable.jar $PRESTO_HOME/bin/presto-cli \
+    && chmod 0755 $PRESTO_HOME/bin/presto-cli \
     && ln -sf /opt/presto-cli /usr/local/bin/ \
-    && mkdir -p $PRESTO_HOME/etc/catalog \
-    && mkdir -p /var/lib/presto/data \
-        && mkdir -p /usr/lib/presto/utils \
-        && curl -o /usr/lib/presto/utils/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/$JMX_PROMETHEUS_JAVAAGENT_VERSION/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar \
-        && ln -sf /usr/lib/presto/utils/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar /usr/lib/presto/utils/jmx_prometheus_javaagent.jar
+    && mkdir -p $PRESTO_HOME/data \
+        && mkdir -p $PRESTO_HOME/utils \
+        && curl -o $PRESTO_HOME/utils/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/$JMX_PROMETHEUS_JAVAAGENT_VERSION/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar \
+        && ln -sf $PRESTO_HOME/utils/jmx_prometheus_javaagent-$JMX_PROMETHEUS_JAVAAGENT_VERSION.jar $PRESTO_HOME/utils/jmx_prometheus_javaagent.jar
 
 COPY --chmod=0755 presto-dev/presto/etc $PRESTO_HOME/etc
 COPY --chmod=0755 presto-dev/presto/entrypoint.sh $PRESTO_HOME/
+
+FROM ${BASE_IMAGE} as ubuntu-dev
+
+ENV PRESTO_HOME=/opt/presto \
+    JMX_PROMETHEUS_JAVAAGENT_VERSION=0.20.0 \
+    BUILD_ROOT=/presto
+
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt/lists,sharing=locked \
+    --mount=from=builder,source=/opt,target=/builder/opt \
+    apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y software-properties-common wget less procps git vim diffutils curl xz-utils openjdk-17-jdk-headless && \
+    add-apt-repository ppa:deadsnakes/ppa && \
+    apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y python3.11 python3.11-venv python3.11-distutils && \
+    update-alternatives --install /usr/bin/python python /usr/bin/python3.11 1 && \
+    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 && \
+    python3 -m pip install cmake && \
+    mkdir -p /opt/cache && \
+    mkdir -p $PRESTO_HOME && \
+    cp -a /builder${PRESTO_HOME}/* $PRESTO_HOME/ && \
+    ln -sf $PRESTO_HOME/bin/presto-cli /usr/local/bin/ && \
+    cp -a /builder/opt/cache/. /opt/cache/ && \
+    rm -rf /root/.cache && \
+    ln -sf /opt/cache/.??* /root/
 
 FROM ${BASE_IMAGE} as centos-dev
 
@@ -71,6 +93,7 @@ ENV PYTHON_VERSION=3.11.9 \
 
 RUN --mount=type=cache,target=/var/cache/dnf,sharing=locked \
     --mount=type=cache,target=/usr/local/src,sharing=locked \
+    --mount=from=builder,source=/opt,target=/builder/opt \
     dnf update -y && dnf install -y java-17-openjdk-headless less procps wget diffutils git vim gdb && \
     cd /usr/local/src && \
     wget -c https://www.python.org/ftp/python/${PYTHON_VERSION}/Python-${PYTHON_VERSION}.tgz && \
@@ -81,13 +104,15 @@ RUN --mount=type=cache,target=/var/cache/dnf,sharing=locked \
     make altinstall && \
     alternatives --install /usr/bin/python python /usr/local/bin/python3.11 1 && \
     alternatives --install /usr/bin/python3 python3 /usr/local/bin/python3.11 1 && \
+    python3 -m pip install --upgrade pip && \
     python3 -m pip install cmake && \
     rm -rf Python-${PYTHON_VERSION} && \
-    mkdir -p /var/cache/root && \
-    ln -sf /var/cache/root/.m2 /root/.m2 && \
-    ln -sf /var/cache/root/.cache /root/.cache
+    mkdir -p /opt/cache && \
+    mkdir -p $PRESTO_HOME && \
+    cp -a /builder${PRESTO_HOME}/* $PRESTO_HOME/ && \
+    ln -sf $PRESTO_HOME/bin/presto-cli /usr/local/bin/ && \
+    cp -a /builder/opt/cache/. /opt/cache/ && \
+    rm -rf /root/.cache && \
+    ln -sf /opt/cache/.??* /root/
 
-COPY --from=ubuntu-dev /var/cache/root/.m2 /var/cache/root/.m2
-COPY --from=ubuntu-dev /var/cache/root/.cache /var/cache/root/.cache
-COPY --from=ubuntu-dev $PRESTO_HOME $PRESTO_HOME
 
