--- a/.github/workflows/publish-dependency-image.yml
+++ b/.github/workflows/publish-dependency-image.yml
@@ -70,17 +70,23 @@ jobs:
 
           echo "Currently on: $(git rev-parse --abbrev-ref HEAD)"
           echo "Commit SHA: $(git rev-parse HEAD)"
+          echo "COMMIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
       - name: Checkout submodules
+        working-directory: presto-native-execution
         run: |
           df -h
-          cd presto-native-execution && make submodules
-          echo "COMMIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          make submodules
 
       - name: Extract version
         run: |
           VERSION=$(./mvnw help:evaluate -Dexpression=project.version -q -DforceStdout)
           echo "Raw version: $VERSION"
+
+          if [ -z "$VERSION" ]; then
+            echo "Failed to extract project version with Maven"
+            exit 1
+          fi
 
           if [[ "$VERSION" == *"-SNAPSHOT" ]]; then
             # Remove -SNAPSHOT and append commit SHA
@@ -95,16 +101,16 @@ jobs:
           echo "VERSION=$TAG_VERSION" >> $GITHUB_ENV
 
       - name: Login to DockerHub
-        uses: docker/login-action@v3
+        uses: docker/login-action@184bdaa0721073962dff0199f1fb9940f07167d1 # v3.0.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+        uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3.0.0
 
       - name: Set up buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.0.0
 
       - name: Set up builder
         run: |
@@ -146,6 +152,7 @@ jobs:
 
       - name: Publish image
         run: |
+          set -e
           docker tag ${{ env.LOCAL_IMAGE_TAG }} ${{ env.IMAGE_TAG }}
           docker push ${{ env.IMAGE_TAG }}
 
